2002-05-06  John Harper  <jsh@unfactored.org>

	* i18n.jl: patch from Christophe Fergeau
	<teuf@users.sourceforge.net> to call bindtextdomaincodeset
	function. Modified to only call it if it exists

2002-04-20  John Harper  <jsh@unfactored.org>

	Removed user levels, button configuration:

	* wm.jl, user-level.jl, slot.jl, shell.jl, main.jl.in,
	apply.jl, Makefile.in: 

	* widgets/command.jl: 

2002-04-18  John Harper  <jsh@unfactored.org>

	* widgets/match-window.jl: use optional scheme-boolean widgets
	to display booleans. Adapted from merlin <merlin@merlin.org>

2001-09-07  John Harper  <jsh@pixelslut.com>

	* layouts/keymaps.jl (layout-keymaps): fixed bug of keymap
	popup menu being displayed even if there are no keymaps to
	configure

	* shell.jl (display-flattened): fixed bug of `--flatten
	--single-level' combination not working properly

2001-08-23  John Harper  <jsh@pixelslut.com>

	* widgets/match-window.jl (make-match-window:matchers): search
	the translated X properties for the real atom name when
	grabbing properties, don't pass the (translated) property name

2001-07-02  John Harper  <jsh@pixelslut.com>

	* version 0.99

2001-04-20  John Harper  <jsh@eazel.com>

	Extra i18n work. Adapted from a patch by Vlad Harchev
	<hvv@hippo.ru>

	* layouts/keymaps.jl (beautify-keymap-name): try to localize
	the name before returning it
	* widgets/keymap.jl (beautify-symbol-name): ditto
	* widgets/match-window.jl (beautify-symbol-name): ditto

	* widgets/match-window.jl (make-match-window:matchers):
	localizes all property names before starting, then uses that
	list of properties

2001-02-13  John Harper  <jsh@eazel.com>

	* version 0.37

2001-02-07  John Harper  <jsh@eazel.com>

	* widgets/event.jl (make-event-item): strip leading and
	trailing white space from the event name in the `ref' method

2001-01-27  John Harper  <jsh@eazel.com>

	* shell.jl (display-flattened-group): translate the real name
	of the group before making it the title of the notebook page
