@@ -1,3 +1,9 @@
+2002-05-29  John Harper  <jsh@unfactored.org>
+
+	* widgets/frame-style.jl (make-frame-style-item): added a 200ms
+	delay before installing new themes, avoids overloading X when
+	dragging over the combo box menu. Should fix #81723
+
 2002-05-06  John Harper  <jsh@unfactored.org>
 
 	* i18n.jl: patch from Christophe Fergeau
